--- a/index.html
+++ b/index.html
@@ -28,25 +28,23 @@
 
           <input class="inputCalc" id="numero1Soma" type="number" required />
           <input class="inputCalc" id="numero2Soma" type="number" required />
-          <button class="buttonCalc">SOMAR</button>
+          <button class="buttonCalc" onclick="somar()" >SOMAR</button>
           <p class="resultado">Resultado: </p>
 
           <input class="inputCalc" id="numero1Sub" type="number" required />
           <input class="inputCalc" id="numero2Sub" type="number" required />
-          <button class="buttonCalc">SUBTRAIR</button>
-          <p class="resultado">Resultado: </p>
+          <button class="buttonCalc" id="botaoSub">SUBTRAIR</button>
+          <p class="resultado" id="resultadoSub">Resultado: </p>
 
           <input class="inputCalc" id="numero1Mult" type="number" required />
           <input class="inputCalc" id="numero2Mult" type="number" required />
-          <button class="buttonCalc">
-            MULTIPLICAR
-          </button>
-          <p class="resultado">Resultado: </p>
+          <button class="buttonCalc" id="botaoMult"> MULTIPLICAR </button>
+          <p class="resultado" id="resultadoMult">Resultado: </p>
 
           <input class="inputCalc" id="numero1Div" type="number" required />
           <input class="inputCalc" id="numero2Div" type="number" required />
-          <button class="buttonCalc">DIVIDIR</button>
-          <p class="resultado">Resultado: </p>
+          <button class="buttonCalc" id="botaoDiv">DIVIDIR</button>
+          <p class="resultado" id="resultadoDiv">Resultado: </p>
         </section>
 
         <section id="projeto2">
