--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Projeto Final JS</title>
   </head>
   <body>
@@ -82,7 +82,7 @@
       </div>
     </main>
 
-    <script type="text/javascript" src="/js/calculadora.js"></script>
-    <script type="text/javascript" src="/js/media.js"></script>
+    <script type="text/javascript" src="js/calculadora.js"></script>
+    <script type="text/javascript" src="js/media.js"></script>
   </body>
 </html>
