mantendo somar somente com onclick

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <input class="inputCalc" id="numero1Soma" type="number" required />
           <input class="inputCalc" id="numero2Soma" type="number" required />
-          <button class="buttonCalc" id="botaoSomar" onclick="somar()" >SOMAR</button>
+          <button class="buttonCalc"  onclick="somar()" >SOMAR</button>
           <p class="resultado">Resultado: </p>
 
           <input class="inputCalc" id="numero1Sub" type="number" required />
