refatorando conforme fedback

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
           <input class="inputCalc" id="numero1Soma" type="number" required />
           <input class="inputCalc" id="numero2Soma" type="number" required />
           <button class="buttonCalc"  onclick="somar()" >SOMAR</button>
-          <p class="resultado">Resultado: </p>
+          <p class="resultado" id="resultadoSoma">Resultado: <strong id="strongSoma"></strong> </p>
 
           <input class="inputCalc" id="numero1Sub" type="number" required />
           <input class="inputCalc" id="numero2Sub" type="number" required />
           <button class="buttonCalc" id="botaoSub">SUBTRAIR</button>
-          <p class="resultado" id="resultadoSub">Resultado: </p>
+          <p class="resultado" id="resultadoSub">Resultado: <strong id="strongSub"></strong> </p>
 
           <input class="inputCalc" id="numero1Mult" type="number" required />
           <input class="inputCalc" id="numero2Mult" type="number" required />
           <button class="buttonCalc" id="botaoMult"> MULTIPLICAR </button>
-          <p class="resultado" id="resultadoMult">Resultado: </p>
+          <p class="resultado" id="resultadoMult">Resultado: <strong id="strongMult"></strong> </p>
 
           <input class="inputCalc" id="numero1Div" type="number" required />
           <input class="inputCalc" id="numero2Div" type="number" required />
           <button class="buttonCalc" id="botaoDiv">DIVIDIR</button>
-          <p class="resultado" id="resultadoDiv">Resultado: </p>
+          <p class="resultado" id="resultadoDiv">Resultado: <strong id="strongDiv"></strong></p>
         </section>
 
         <section id="projeto2">
@@ -77,6 +77,7 @@
               Qual a situação da estudante?
             </button>
 
+            <p id="fraseResultado"></p>
           </div>
         </section>
       </div>
